# kappa-streaming-lakehouse

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README.pt-BR.md
.github/: PULL_REQUEST_TEMPLATE.md
adr/: 0001-architecture-bundles-framework-compliance.md  0002-full-retrofit-authorized.md  0003-kappa-over-lambda.md  0004-iceberg-over-delta-hudi.md  0005-flink-over-spark-structured-streaming.md  0006-minio-over-gcs-for-local-dev.md  0007-nessie-rest-catalog-over-jdbc-catalog.md  0008-odcs-contract-driven-job-ddl.md  0009-medallion-architecture-with-contracts.md  0010-wide-schema-cdc-topic.md  0011-doris-cubejs-federation.md
diagrams/: architecture.architecture.json  architecture.html  dataflow.dataflow.json  dataflow.html  lifecycle.html  lifecycle.lifecycle.json  sequence.html  sequence.sequence.json  workflow.html  workflow.workflow.json
docs/: compliance-gap-report.md  faq.md  flink-jobs.md  playbook.md  runbook.md  trade-offs.md  tradeoffs.md  troubleshooting.md
flink-jobs/: pyproject.toml  requirements.txt
infra/: docker-compose.yml
queries/: top_converting_products.sql
rfcs/: RFC-0000-project-charter.md  (+10 more)
services/flink-jobs/: pyproject.toml  requirements.txt
services/flink-jobs/contracts/: raw_events.contract.yaml
services/flink-jobs/src/: common.py  order_ingestion.py  product_funnel.py  raw_event_ingestion.py  session_aggregation.py  silver_enrichment.py  user_360.py
services/flink-jobs/src/contracts/: __init__.py  loader.py
services/simulator/: pyproject.toml
services/simulator/src/simulator/: entities.py  events.py
(+41 files in other folders)
