[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kappa-flink-jobs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "apache-flink==1.18.1",
    "click>=8.1",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
